# gestor_stock

./: .gitattributes  .gitignore  GestionStock.spec  MIGRACION_OTRO_PC.md  README.md  RUNBOOK_PYTHONANYWHERE_DISK_QUOTA.md  SUBIR_A_GITHUB.md  app.py  background_agent.py  backup.py  build.py  build.spec  camera_hub.py  config.py  database.py  dev.bat  installer.iss  main.py  main.spec  quick_build.bat  requirements.pythonanywhere.txt  requirements.txt  stress_test.py  unit_utils.py
camaras/: go2rtc.yaml
launcher_admin_tauri/: README.md  package.json
launcher_admin_tauri/src/: index.html
launcher_admin_tauri/src-tauri/: Cargo.toml  tauri.conf.json
launcher_admin_tauri/src-tauri/src/: main.rs
static/: app-ux.js  darkmode-fixes.css  nav-active.js  style.css
templates/: _sidebar.html  admin_login.html  agenda.html  alertas.html  base.html  camaras.html  correlacion_operativa.html  cupones_admin.html  facturas.html  haccp.html  historial_cambios.html  historial_ventas.html  index.html  insumos.html  produccion.html  productos.html  reportes.html  settings.html  tienda.html  tienda_admin.html  tienda_catalogo_torta_admin.html  tienda_personalizacion_admin.html  ventas.html
tools/: data_bundle.py
